# vol-node-cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists-mem-bug.txt  CMakeLists-memtest.txt  CMakeLists.txt  Dockerfile  Dockerfile-base  Podfile  README.md  docker-build.sh  doxyfile  genesis.in  genesis.signed  license.md  license.txt  main-deploy-network.js  mining-node-spinup  pkey0.pem  pkey0.pem.json  pkey0.pem.priv  pkey0.pem.pub  poco-notes.txt  sqlite-blocktree-test.db  todo  todo-layout  valgrind.out  volition-web.yml  volition.properties
cmake/simple-cpp-router/: CMakeLists.txt
consensus/: analysis.cpp  analysis.h  chain.cpp  chain.h  cohort.cpp  cohort.h  common.h  context.cpp  context.h  main.cpp  (+2 more)
consensus.xcodeproj/: project.pbxproj
vol-node-cpp/: .gitignore  CMakeLists.txt  Dockerfile  Podfile  genesis-and-schema.in  genesis-beta.in  genesis-beta.json.in  genesis.json.in  main-deploy-network.js  nodelist.json
vol-node-cpp/cmake/lua/: CMakeLists.txt
vol-node-cpp/keys/: 9090.account.json  beta.pub.json
vol-node-cpp/ops/: .env.example  beta-build.sh  beta-run-volition-solo.sh  build-dev.sh  build-poco.sh  build.sh  dev-run-volition-bash.sh  dev-run-volition-solo.sh  make-version-header.sh  run-volition-bash-dev.sh  run-volition-bash.sh  run-volition-beta.sh  run-volition-debug.sh  run-volition-multi.sh  run-volition-solo-debug.sh  run-volition-solo-dev.sh  run-volition-solo.sh  run-volition.sh  run.sh
vol-node-cpp/ops/compose-volition/: docker-compose.yml
vol-node-cpp/ops/compose-volition-valgrind/: docker-compose.yml
vol-node-cpp/ops/docker-volition/: Dockerfile
vol-node-cpp/ops/poco/: build.sh
vol-node-cpp/ops/volume-volition/: .gitignore
vol-node-cpp/redis/: redis.conf
vol-node-cpp/scenarios/: .gitignore  deploy-scenario.js  down.sh  make-scenario.js  up.sh
vol-node-cpp/scenarios/image-logio-file/: Dockerfile
vol-node-cpp/scenarios/image-logio-server/: Dockerfile
vol-node-cpp/scenarios/volume-logio/conf/: file.json
vol-node-cpp/src/volition/: AbstractAPIRequestHandler.cpp  AbstractBlockTree.cpp  AbstractBlockTree.h  AbstractBlockTreeNode.cpp  AbstractBlockTreeNode.h  AbstractChainRecorder.h  AbstractControlCommandBody.cpp  AbstractCryptoKey.cpp  AbstractMiningMessenger.h  AbstractMiningMessengerClient.h  AbstractRequestHandler.cpp  AbstractSquap.h  AbstractTransactionBody.cpp  AbstractTransactionBody.h  Accessors.h  Account.h  AccountEntitlements.h  AccountODBM.h  Asset.h  AssetDefinition.h  AssetFieldValue.h  AssetID.cpp  AssetID.h  AssetMethod.cpp  AssetMethod.h  AssetMethodInvocation.h  AssetODBM.h  Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  BlockHeaderFields.cpp  BlockODBM.h  BlockTree.cpp  BlockTree.h  BlockTreeCursor.cpp  BlockTreeCursor.h  BlockTreeEnums.h  BlockTreeNode.cpp  BlockTreeNode.h  (+129 more)
vol-node-cpp/src/volition/control-commands/: ExtendNetwork.h  SelectReward.h  SetMinimumGratuity.h
vol-node-cpp/src/volition/gtest/: TestBlockTree.cpp  TestCrafting.cpp  TestCrafting.json.h  TestFeeDistributionTable.cpp  TestMiner.cpp  TestSimulation.cpp  TestWebMiner.cpp
vol-node-cpp/src/volition/serialization/: AbstractSerializerFrom.h  FromJSONSerializer.h  SerializableList.h  SerializableMap.h  SerializableOpaque.h  SerializableSharedPtr.h  SerializableTime.h  SerializableVector.h  Serialization.h  SerializerKeys.h  SortedDigestSerializer.h  ToJSONSerializer.h
vol-node-cpp/src/volition/simulation/: AbstractScenario.h  Analysis.cpp  Analysis.h  Cohort.cpp  Cohort.h  SimMiner.cpp  SimMiner.h  SimMiningMessenger.cpp  SimMiningMessenger.h  SimMiningNetwork.cpp  SimMiningNetwork.h  SimTransaction.h  Simulation.cpp  Simulation.h  Simulations.h  Simulator.cpp  Simulator.h  SimulatorActivity.cpp  SimulatorActivity.h
vol-node-cpp/src/volition/transactions/: AffirmKey.h  BetaGetAssets.h  BetaGetDeck.h  Genesis.h  GenesisBlock.h  GenesisMiner.h  GenesisSQLite.cpp  GenesisSQLite.h  HardReset.h  LoadLedger.cpp  LoadLedger.h  OpenAccount.h  PublishSchema.h  PublishSchemaAndReset.h  RegisterMiner.h  RenameAccount.h  RestoreAccount.h  RestrictAccount.h  RestrictKey.h  RunScript.h  SelectReward.h  SendAssets.h  SendVOL.h  SetEntitlements.h  SetMinimumGratuity.h  UpgradeAssets.h
vol-node-cpp/src/volition/web-miner-api/: AccountDetailsHandler.h  AccountKeyListHandler.h  AccountTransactionHandler.h  AssetDetailsHandler.h  BlockDetailsHandler.h  BlockHeaderHandler.h  BlockListHandler.h  ConsensusBlockDetailsHandler.h  ConsensusBlockHeaderListHandler.h  ControlCommandHandler.h  DebugKeyGenHandler.h  DefaultHandler.h  ExtendChainHandler.h  HTTPRequestHandlerFactory.cpp  InventoryAssetsHandler.h  InventoryHandler.h  InventoryLogHandler.h  KeyAccountDetailsHandler.h  KeyDetailsHandler.h  MinerListHandler.h  NodeDetailsHandler.h  ResetChainHandler.h  SchemaHandler.h  TestKeyIDHandler.h  TestSignatureHandler.h  TransactionHandler.h
vol-node-cpp/test/: test-schema.xlsx
vol-node-cpp/test-net/: genesis-1.json  genesis-3.json  genesis-4.json  genesis-9090.json  genesis-all.json  reset.sh
vol-node-cpp/test-net/9090/: volition.ini
vol-node-cpp/test-net/9091/: volition.ini
vol-node-cpp/test-net/9091/keys/: mining.priv.pem
vol-node-cpp/test-net/9092/: volition.ini
vol-node-cpp/test-net/9092/keys/: control.priv.pem
vol-node-cpp/test-net/9093/: volition.ini
vol-node-cpp/test-net/9093/keys/: control.pub.pem  mining.priv.pem
vol-node-cpp/test-observe/: run.sh
vol-node-cpp/test-solo/keys/: control.priv.pem  mining.priv.pem
vol-node-cpp/test/keys/: key9093.priv.json  key9093.pub.json  key9094.priv.json  test-ec.priv.json  test-rsa.pub.pem
vol-node-cpp/volition.xcodeproj/: project.pbxproj
vol-node-cpp/volition.xcodeproj/xcshareddata/xcschemes/: leaks.xcscheme  lib-lua.xcscheme  lib-volition.xcscheme  server-solo-persist-beta.xcscheme  server-solo-persist.xcscheme  server-solo.xcscheme  server.xcscheme  simulator.xcscheme  util-dump-key.xcscheme  util.xcscheme  volition-gtest.xcscheme
vol-node-cpp/volition.xcworkspace/: contents.xcworkspacedata
vol-node-cpp/volition.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
(+914 files in other folders)
